--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
 	background-color: #00CCCC;
 }
 
+/* CSS for first animation */
+
 #head {
 	position: relative;
 	top: 0;
@@ -19,7 +21,7 @@ body {
 }
 
 #head .r_eye {
-	position: relative;
+	position: absolute;
 	top: -29px;
 	left: 46px;
 }
@@ -30,6 +32,7 @@ body {
 	left: 96px;	
 }
 
+/* CSS for second animation div */
 
 #headflip {
 	position: relative;
@@ -46,4 +49,33 @@ body {
 	position: absolute;
 	top: 30px;
 	left: 260px;
+}
+
+/* CSS for third animation div */
+
+#flipANDbug {
+	position: relative;
+	top: 20px;
+	width: 100%;
+	height: 269px;
+}
+#flipANDbug .face {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+#flipANDbug .flip {
+	position: absolute;
+	top: 30px;
+	left: 260px;
+}
+#flipANDbug .r_eye {
+	position: absolute;
+	top: -29px;
+	left: 46px;
+}
+#flipANDbug .l_eye {
+	position: absolute;
+	top: -2px;
+	left: 96px;	
 }
