--- a/style.css
+++ b/style.css
@@ -2,16 +2,42 @@ body {
 	background-color: #00CCCC;
 }
 
+
+
+/* CSS for second animation div */
+
+.reversedimg {
+    -moz-transform : scaleX(-1);
+    -o-transform : scaleX(-1);
+    -webkit-transform : scaleX(-1);
+    transform : scaleX(-1);
+    filter : FlipH;
+    -ms-filter : "FlipH";
+}
+#headflip {
+	position: relative;
+	top: 20px;
+	width: 100%;
+	height: 269px;
+}
+#headflip .face {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+#headflip .flip {
+	position: absolute;
+	top: 30px;
+	left: 260px;
+}
+
 /* CSS for first animation */
 
 #head {
 	position: relative;
-	top: 0;
-	left: 0;
-	width: 250px;
+	top: 20px;
+	width: 100%;
 	height: 269px;
-	overflow: hidden;
-	align: left;
 }
 
 #head .face {
@@ -31,21 +57,7 @@ body {
 	top: -2px;
 	left: 96px;	
 }
-
-/* CSS for second animation div */
-
-#headflip {
-	position: relative;
-	top: 20px;
-	width: 100%;
-	height: 269px;
-}
-#headflip .face {
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-#headflip .flip {
+#head .bug {
 	position: absolute;
 	top: 30px;
 	left: 260px;
@@ -78,4 +90,62 @@ body {
 	position: absolute;
 	top: -2px;
 	left: 96px;	
+}
+
+/* CSS for eyeroll animation div */
+
+#eyeroll {
+	position: relative;
+	top: 20px;
+	width: 100%;
+	height: 269px;
+}
+#eyeroll .face {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+#eyeroll .eyeroll {
+	position: absolute;
+	top: 30px;
+	left: 260px;
+}
+#eyeroll .r_eye {
+	position: absolute;
+	top: -29px;
+	left: 46px;
+}
+#eyeroll .l_eye {
+	position: absolute;
+	top: -2px;
+	left: 96px;	
+}
+
+/* Hulk animation div */
+#hulk {
+	position: relative;
+	top: 20px;
+	width: 100%;
+	height: 269px;
+}
+#hulk .face {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 10;
+}
+#hulk .green {
+	position: absolute;
+	top: 0;
+	left: 0;
+	zoom: 1;
+	opacity: 0;
+	filter: alpha(opacity=0);
+	z-index: 10;
+}
+#hulk .hulkout {
+	position: absolute;
+	top: 30px;
+	left: 260px;
+	z-index: 0;
 }
